# pipetrace

./: .envrc  .gitignore  FIFO_SCHEMA.md  FIFO_SCHEMA.org  MISE_EN_PLACE.org  Makefile  PROMPTS.org  README.org  SETUP_STEPS.md  STATUS_REPORT.md  STATUS_REPORT.org  pyproject.toml  setup.org
src/: example.py
src/pipetrace/: __init__.py  pipetrace.py  read_fifo.py
