[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipetrace"
version = "0.1.0"
description = "A lightweight Python tool for tracing program control flow using named pipes (FIFOs)"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "jwalsh", email = "example@example.com"}
]
keywords = ["debugging", "tracing", "control-flow", "fifo", "named-pipes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Debuggers",
]

[project.urls]
"Homepage" = "https://github.com/aygp-dr/pipetrace"
"Bug Tracker" = "https://github.com/aygp-dr/pipetrace/issues"
"Documentation" = "https://github.com/aygp-dr/pipetrace/blob/main/README.org"

[tool.setuptools]
packages = ["pipetrace"]
package-dir = {"" = "src"}

[project.scripts]
pipetrace-monitor = "pipetrace.read_fifo:main"